--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
 				<div class="section-heading">
 					<h2 class="section-title restaurant-title">Пицца Плюс</h2>
 					<div class="card-info">
-						<div class="rating">
-							4.5
-						</div>
+						<div class="rating">4.5</div>
 						<div class="price">От 900 ₽</div>
 						<div class="category">Пицца</div>
 					</div>
